# smartkdb

./: .gitignore  .readthedocs.yaml  INTELLISENSE_FIX.md  INTELLISENSE_SETUP.md  LICENSE  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  final_check.py  pyproject.toml  pyrightconfig.json  smartkdb.pyi
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  INSTALLATION.md  INTELLISENSE_UPGRADE.md  PROJECT_STRUCTURE.md  PUBLISHING_GUIDE.md  SECURITY.md  USER_GUIDE.md  conf.py  index.rst
examples/: ai_features.py  intellisense_test.py  quickstart.py  transactions.py  v5_demo.py
smartkdb/: README.md  __init__.py
smartkdb/ai/: brain.py  llm_connectors.py  trainer.py
smartkdb/core/: __init__.py  distributed.py  engine.py  index.py  storage.py  transaction.py  versioning.py
smartkdb/gui/: backend.py
smartkdb/gui/frontend/: index.html
smartkdb/plugins/: manager.py
tests/: test_core.py
