[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartkdb"
version = "5.0.2"
description = "SmartKDB v5 – The Cognitive AI-Native Database Platform"
readme = "README.md"
authors = [
    { name = "Alhdrawi", email = "alhdrawi@example.com" }
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]
keywords = ["database", "embedded", "ai", "nosql", "acid", "transactions", "time-travel"]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
full = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/alhdrawi/smartkdb"
Repository = "https://github.com/alhdrawi/smartkdb"
"Bug Tracker" = "https://github.com/alhdrawi/smartkdb/issues"
Documentation = "https://github.com/alhdrawi/smartkdb#readme"

